# fractal_compression

./: CMakeLists.txt  tester.cpp
Compress/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  IFSTransform.cpp  IFSTransform.h
src/: bmplib.cpp  bmplib.h  colorspaces.cpp  colorspaces.h  extension.cpp  extension.h  fcompression.cpp  fcompression.h  main.cpp  measure.cpp  measure.h
